补充GC日志相关的参数和日志格式笔记